<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="20dp"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/mEventLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="22dp"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_nombre_tianguis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="21sp"
            android:textColor="@android:color/black"
            android:text="Tianguis del dia 01/09/19 "/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_right"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:text="@string/itempayment_nombre" />
            <TextView
                android:id="@+id/tv_nombrePermisionario"
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginLeft="@dimen/padding_right"
                android:layout_height="wrap_content"
                android:text=" juanito perez lopez gutierrez "/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_right"
            android:orientation="horizontal">
            
            <TextView
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:text="@string/itempayment_puesto" />
            <TextView
                android:id="@+id/tv_puesto"
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginLeft="@dimen/padding_right"
                android:layout_height="wrap_content"
                android:text="1A1"/>
            
            
            <TextView
                android:layout_marginTop="@dimen/padding_top"
                android:layout_marginLeft="148dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:text="@string/itempayment_metros" />
            <TextView
                android:id="@+id/tv_metros"
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginLeft="@dimen/padding_right"
                android:layout_height="wrap_content"
                android:text="2 mts"/>
            



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_right"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/itempayment_saldo_antes" />
            <TextView
                android:id="@+id/tv_saldo_antes"
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginLeft="@dimen/padding_right"
                android:layout_height="wrap_content"
                android:text="10,000"/>


            <TextView
                android:layout_marginTop="@dimen/padding_top"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/itempayment_saldo_despues" />
            <TextView
                android:id="@+id/tv_saldo_despues"
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:layout_marginLeft="@dimen/padding_right"
                android:layout_height="wrap_content"
                android:text="9,999"/>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="@dimen/padding_right"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:visibility="invisible"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/itempayment_descuento" />
            <TextView
                android:id="@+id/tv_descuento"
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:visibility="invisible"
                android:layout_marginLeft="@dimen/padding_right"
                android:layout_height="wrap_content"
                android:text="100%"/>


            <TextView
                android:layout_marginTop="@dimen/padding_top"
                android:layout_marginLeft="120dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:text="@string/itempayment_cobro" />
            <TextView
                android:id="@+id/tv_cobro_total"
                android:layout_marginTop="@dimen/padding_top"
                android:layout_width="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/padding_right"
                android:layout_height="wrap_content"
                android:text="9,999"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_registrar_cobro"
            android:layout_marginLeft="400dp"
            android:textColor="@android:color/white"
            android:visibility="visible"
            android:background="@drawable/btn_rounded"
            android:text="Cobrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnImprimir"
            android:layout_marginLeft="400dp"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:background="@drawable/btn_rounded"
            android:text="Imprimir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

</android.support.v7.widget.CardView>